--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <canvas></canvas>
     <input id="line-width" type="range" min="1" max="10" value="5" step="0.5" />
-    <input type="color" id="color" />
+    <input id="color" type="color" />
     <div>
       <div
         class="color-option"
@@ -79,6 +79,8 @@
     <button id="eraser-btn">Erase</button>
 
     <input type="file" accept="image/*" id="file" />
+    <input id="text" type="text" placeholder="Write and then double click" />
+
     <script src="app.js"></script>
   </body>
 </html>
