--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
     <input type="file" accept="image/*" id="file" />
     <input id="text" type="text" placeholder="Write and then double click" />
+    <button id="save">Save image</button>
 
     <script src="app.js"></script>
   </body>
