--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <body>
     <canvas></canvas>
-    <input id="line-width" type="range" min="1" max="10" value="5" step="0.5" />
-    <input id="color" type="color" />
-    <div>
+    <input id="line-width" type="range" min="1" max="10" value="5" step="0.1" />
+    <div class="color-options">
+      <input type="color" id="color" />
       <div
         class="color-option"
         style="background-color: #1abc9c"
@@ -57,11 +57,6 @@
         class="color-option"
         style="background-color: #d35400"
         data-color="#d35400"
-      ></div>
-      <div
-        class="color-option"
-        style="background-color: #bdc3c7"
-        data-color="#bdc3c7"
       ></div>
       <div
         class="color-option"
