--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   </head>
 
   <body>
-    <canvas></canvas>
-    <input id="line-width" type="range" min="1" max="10" value="5" step="0.1" />
     <div class="color-options">
       <input type="color" id="color" />
       <div
@@ -69,13 +67,28 @@
         data-color="#e67e22"
       ></div>
     </div>
-    <button id="mode-btn">Fill</button>
-    <button id="destroy-btn">Destroy</button>
-    <button id="eraser-btn">Erase</button>
+    <canvas></canvas>
 
-    <input type="file" accept="image/*" id="file" />
-    <input id="text" type="text" placeholder="Write and then double click" />
-    <button id="save">Save image</button>
+    <div class="btns">
+      <span>Stroke</span>
+      <input
+        id="line-width"
+        type="range"
+        min="1"
+        max="10"
+        value="5"
+        step="0.1"
+      />
+      <button id="mode-btn">🖌 Fill</button>
+      <button id="destroy-btn">🗑 Destroy</button>
+      <button id="eraser-btn">✂ Erase</button>
+      <label for="file">
+        🗄 Add photo
+        <input type="file" accept="image/*" id="file"
+      /></label>
+      <input id="text" type="text" placeholder="Please enter text :)" />
+      <button id="save">💾 Save image</button>
+    </div>
 
     <script src="app.js"></script>
   </body>
